# Secure-OTA

./: README.md
ota-agent/: CMakeLists.txt  README.md  toolchain.cmake
ota-agent/scripts/: generate_ca.sh  generate_device_cert.sh
ota-agent/src/: main.cpp
ota-agent/systemd/: ota-agent.service
ota-server/: docker-compose.yml
ota-server/be-api/: .env  Dockerfile  requirements.txt
ota-server/be-api/app/: config.py  main.py
ota-server/be-api/app/core/: kms_client.py  storage_client.py
ota-server/be-api/app/db/: init.sql  session.py
ota-server/be-api/app/models/: __init__.py  campaign.py  device.py  firmware.py
ota-server/be-api/app/services/admin/: admin_router.py  admin_schemas.py  admin_service.py
ota-server/be-api/app/services/device/: device_router.py  device_schemas.py  device_service.py
ota-server/docs/: api_spec.md  database_schema.md
ota-server/kms/: Dockerfile  requirements.txt
ota-server/kms/app/: main.py  signer.py
ota-server/kms/keys/: .gitignore  public.pem
ota-server/scripts/: generate_keys.py
